--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>积分商城</title>
-  </head>
-  <body>
-
-    <app></app>
-
-  <script src="/n-build/vendor.js"></script><script src="/n-build/build.js"></script></body>
-
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>vue-chat</title>
+</head>
+<body>
+<app></app>
+<!-- built files will be auto injected -->
+</body>
 </html>
